	PR c++/68362 	* c-common.c (check_case_bounds): Fold low and high cases.

* g++.dg/delayedfold/switch-1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@230435 138bc75d-0d04-0410-961f-82ee72b054a4